20200818 아이디 중복 확인 작업 전

--- a/src/main/webapp/resources/user/css/register.css
+++ b/src/main/webapp/resources/user/css/register.css
@@ -125,3 +125,13 @@ body {
 #form_YMD{
   margin-bottom: 35px;
 }
+#inputEmail{
+  width: 78.8%;
+}
+#idcheck{
+  width: 20%;
+  padding: 3px;
+}
+#idArray button{
+  display: inline;
+}
