20200818 이미지 삽입

--- a/src/main/webapp/resources/main/css/blog.css
+++ b/src/main/webapp/resources/main/css/blog.css
@@ -130,6 +130,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* etc */
+body{
+  height: 100vh;
+  background: url('/resources/main/Images/bg_01.png') no-repeat center/cover;
+}
 #sign_in_btn{
   margin-right: 10px;
 }
