--- a/src/main/webapp/resources/main/css/blog.css
+++ b/src/main/webapp/resources/main/css/blog.css
@@ -42,32 +42,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/* .nav-scroller {
-  position: relative;
-  z-index: 2;
-  height: 2.75rem;
-  overflow-y: hidden;
-}
-
-.nav-scroller .nav {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  padding-bottom: 1rem;
-  margin-top: -1px;
-  overflow-x: auto;
-  text-align: center;
-  white-space: nowrap;
-  -webkit-overflow-scrolling: touch;
-}
-
-.nav-scroller .nav-link {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: .875rem;
-} */
-
 #navbar_custom{
   margin: 0px;
 }
@@ -134,6 +108,9 @@ body{
   height: 100vh;
   background: url('/resources/main/Images/bg_01.png') no-repeat center/cover;
 }
+#sign_in_btn_left{
+  display: none;
+}
 #sign_in_btn{
   margin-right: 10px;
 }
@@ -155,5 +132,7 @@ body{
 
 /* media */
 @media screen and (max-width:767px){
-	#nickname{display: none;}
+  #nickname{display: none;}
+  #sign_in_btn{display: none;}
+  #sign_in_btn_left{display:inline;}
 }
