0819 Notice게시판 작업 시작, 글쓰기 구현

--- a/src/main/webapp/resources/MyPage/css/mypage.css
+++ b/src/main/webapp/resources/MyPage/css/mypage.css
@@ -5,12 +5,12 @@ th {
     width: 150px;
 }
 
-footer {
+/* footer {
 position: fixed;
 bottom: 0;
 left: 0;
 right: 0;
-}
+} */
 
 .mpwrap{
 	margin-bottom: 200px;
