--- a/src/main/webapp/resources/main/css/blog.css
+++ b/src/main/webapp/resources/main/css/blog.css
@@ -131,8 +131,10 @@ body{
 }
 
 /* media */
-@media screen and (max-width:767px){
+@media screen and (max-width:1199px){
   #nickname{display: none;}
+}
+@media screen and (max-width:767px){
   #sign_in_btn{display: none;}
   #sign_in_btn_left{display:inline;}
 }
