20200828 - 메인 배너(조회수 높은 4개), 포토갤러리 배너(랜덤 10개), 배너(메인,포토) 크기(16:9)로 설정

--- a/src/main/webapp/resources/user/css/changePwd.css
+++ b/src/main/webapp/resources/user/css/changePwd.css
@@ -117,6 +117,10 @@ body {
 }
 
 /* etc */
+#Change_Pwd{
+  width: 80%;
+  margin-bottom: 10px;
+}
 #inputPassword, #inputRepassword{
   text-align: left;
   background-color: white;
