--- a/src/main/webapp/resources/user/css/findId.css
+++ b/src/main/webapp/resources/user/css/findId.css
@@ -117,6 +117,10 @@ body {
 }
 
 /* etc */
+#Find_Id{
+  width: 40%;
+  margin-bottom: 10px;
+}
 #inputFirstName, #inputLastName, #inputTel{
   text-align: left;
   background-color: white;
