20200831 배경 및 css 수정

--- a/src/main/webapp/resources/user/css/login.css
+++ b/src/main/webapp/resources/user/css/login.css
@@ -137,7 +137,7 @@ input[id="remember"] {
 /* etc */
 body{
   background: url('/resources/user/Images/Sign_UpBg.png') no-repeat center/cover;
-  background-size: 45%;
+  background-size: 850px;
 }
 #logo{
   width: 80%;
