--- a/src/main/webapp/resources/user/css/findId.css
+++ b/src/main/webapp/resources/user/css/findId.css
@@ -117,6 +117,10 @@ body {
 }
 
 /* etc */
+body{
+  background: url('/resources/user/Images/Find_Bg.png') no-repeat center/cover;
+  background-size: 700px;
+}
 #Find_Id{
   width: 60%;
   margin-bottom: 0px;
