20200831 회원가입, 로그인, 아이디 찾기, 비밀번호 찾기 및 변경 (btn->text 변경)

--- a/src/main/webapp/resources/user/css/changePwd.css
+++ b/src/main/webapp/resources/user/css/changePwd.css
@@ -117,6 +117,10 @@ body {
 }
 
 /* etc */
+body{
+  background: url('/resources/user/Images/Find_Bg.png') no-repeat center/cover;
+  background-size: 700px;
+}
 #Change_Pwd{
   width: 80%;
   margin-bottom: 10px;
