20200903 메인 공지사항 완료

--- a/src/main/webapp/resources/main/css/blog.css
+++ b/src/main/webapp/resources/main/css/blog.css
@@ -114,13 +114,36 @@ body{
 #sign_in_btn{margin-right: 10px;}
 #myPage_btn2{display:none;}
 
+#Area_page{margin-bottom: 50px;}
+
 #Banner_carousel{margin-bottom: 40px;}
 #Banner_carousel .carousel-inner > .carousel-item >img{height: 624px;}
-#Photo_carousel .carousel-inner > .carousel-item >img{height: 302px;}
-#Photo_BannerBox{height: 302px;}
 
-#Area_page{margin-bottom: 50px;}
-#A1, #A2{height: 300px;}
+#Photo_BannerBox{height: 302px;}
+#Photo_carousel .carousel-inner > .carousel-item >img{height: 302px;}
+
+#QnA_Box{height: 302px;}
+#QnA_Box table{
+  margin-left: 4%;
+  margin-right: 4%;
+  margin-top: 2.5%;
+}
+#QnA_Box td{
+  padding: 13px;
+  width: 36.2%;
+  display:block;
+  overflow: hidden; 
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+#QnA_Box h3{
+  width: 96%;
+  overflow: hidden; 
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+#QnA_Box #border_Delete{border-top: 0px;}
+#QnA_Box .title_color{color: #47C83E;}
 
 /* media */
 @media screen and (max-width:1199px){
@@ -128,11 +151,13 @@ body{
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 523px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 252px;}
   #Photo_BannerBox{height: 252px;}
+  #QnA_Box td{width: 410px;}
 }
 @media screen and (max-width:991px){
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 388px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 184px;}
   #Photo_BannerBox{height: 184px;}
+  #QnA_Box td{width: 300px;}
 }
 @media screen and (max-width:767px){
   #Main{width: 90%}
@@ -141,49 +166,77 @@ body{
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 286px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 285px;}
   #Photo_BannerBox{height: 285px;}
+  #QnA_Box td{width: 465px;}
 }
 @media screen and (max-width:575px){
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 306px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 305px;}
   #Photo_BannerBox{height: 305px;}
+  #QnA_Box td{width: 500px;}
 }
+@media screen and (max-width:560px){#QnA_Box td{width: 485px;}}
 @media screen and (max-width:540px){
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 286px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 285px;}
   #Photo_BannerBox{height: 285px;}
+  #QnA_Box td{width: 470px;}
 }
+@media screen and (max-width:520px){#QnA_Box td{width: 450px;}}
 @media screen and (max-width:510px){
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 270px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 268px;}
   #Photo_BannerBox{height: 268px;}
+  #QnA_Box td{width: 440px;}
 }
+@media screen and (max-width:500px){#QnA_Box td{width: 430px;}}
+@media screen and (max-width:490px){#QnA_Box td{width: 420px;}}
+@media screen and (max-width:480px){#QnA_Box td{width: 410px;}}
 @media screen and (max-width:470px){
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 247px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 246px;}
   #Photo_BannerBox{height: 246px;}
+  #QnA_Box td{width: 400px;}
 }
+@media screen and (max-width:460px){#QnA_Box td{width: 390px;}}
+@media screen and (max-width:450px){#QnA_Box td{width: 380px;}}
 @media screen and (max-width:440px){
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 230px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 229px;}
   #Photo_BannerBox{height: 229px;}
+  #QnA_Box td{width: 370px;}
 }
+@media screen and (max-width:430px){#QnA_Box td{width: 360px;}}
+@media screen and (max-width:420px){#QnA_Box td{width: 350px;}}
 @media screen and (max-width:414px){
   #Main{width: 100%}
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 216px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 214px;}
   #Photo_BannerBox{height: 214px;}
+  #QnA_Box td{width: 344px;}
 }
+@media screen and (max-width:400px){#QnA_Box td{width: 330px;}}
+@media screen and (max-width:390px){#QnA_Box td{width: 320px;}}
 @media screen and (max-width:375px){
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 194px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 192px;}
   #Photo_BannerBox{height: 192px;}
+  #QnA_Box td{width: 315px;}
 }
+@media screen and (max-width:360px){#QnA_Box td{width: 300px;}}
+@media screen and (max-width:350px){#QnA_Box td{width: 290px;}}
+@media screen and (max-width:340px){#QnA_Box td{width: 280px;}}
 @media screen and (max-width:334px){
   #myPage_btn1{display: none;}
   #myPage_btn2{display: inline;}
 }
+@media screen and (max-width:340px){#QnA_Box td{width: 270px;}}
 @media screen and (max-width:320px){
   #Banner_carousel .carousel-inner > .carousel-item >img{height: 163px;}
   #Photo_carousel .carousel-inner > .carousel-item >img{height: 162px;}
   #Photo_BannerBox{height: 162px;}
+  #QnA_Box td{width: 260px;}
+}
+@media screen and (max-width:280px){
+	#navbar_custom{padding: 0;}
+	#QnA_Box td{width: 220px;}
 }
