20200904 메인 공지사항 링크 완료

--- a/src/main/webapp/resources/main/css/blog.css
+++ b/src/main/webapp/resources/main/css/blog.css
@@ -123,6 +123,10 @@ body{
 #Photo_carousel .carousel-inner > .carousel-item >img{height: 302px;}
 
 #QnA_Box{height: 302px;}
+#QnA_Box a{
+  text-decoration:none;
+  color: black;
+}
 #QnA_Box table{
   margin-left: 4%;
   margin-right: 4%;
