20200904 메인 배경 및 css수정

--- a/src/main/webapp/resources/main/css/blog.css
+++ b/src/main/webapp/resources/main/css/blog.css
@@ -105,7 +105,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* etc */
 body{
-  height: 100vh;
+  height: 150vh;
   background: url('/resources/main/Images/bg_01.png') no-repeat center/cover;
 }
 #Main{width: 220px;}
@@ -164,6 +164,7 @@ body{
   #QnA_Box td{width: 300px;}
 }
 @media screen and (max-width:767px){
+  body{height: 180vh;}
   #Main{width: 90%}
   #sign_in_btn{display: none;}
   #sign_in_btn_left{display:inline;}
