--- a/src/main/webapp/resources/myPage/css/mypage.css
+++ b/src/main/webapp/resources/myPage/css/mypage.css
@@ -1,31 +1,69 @@
-th {
-    background: #eee;
-}
-.mInfotbl th {
-    width: 150px;
+body{
+	background: url('/resources/myPage/Images/bg_01.png') no-repeat;
+	background-size: 700px;
 }
 
-/* footer {
-position: fixed;
-bottom: 0;
-left: 0;
-right: 0;
-} */
+td{background: #fff;}
+th {background: #eee;}
+.mInfotbl th {width: 150px;}
+.mpwrap{margin-bottom: 200px;}
 
-.mpwrap{
-	margin-bottom: 200px;
+#inputTel{
+	display: inline-block;
+	width: 85%;
+}
+#phoneChk{
+	display: inline-block;
+	width: 14.4%;
+	height: 38px;
+	padding: 0px;
+	margin-bottom: 5px;
 }
 
+#form_YMD{margin-bottom: 16px;}
+
+.blog-footer{margin-top: 400px;}
+
+/* media */
+@media screen and (max-width:1199px){
+	#inputTel{width: 84%;}
+	#phoneChk{width: 15.2%;}
+}
 @media(max-width: 992px){
-    .mPosttbl{font-size: small;}
+	body{background-size: 900px;}
+	.mPosttbl{font-size: small;}
 }
-
-@media(max-width: 768px){
+@media(max-width: 767px){
+	#inputTel{width: 82%;}
+	#phoneChk{width: 17%;}
     .mInfotbl th{width: 100px;}
     .mCommenttbl{font-size: small;}
 }
-
 @media(max-width: 576px){
     .mInfotbl{font-size: small;}
     .mInfotbl #thlname{width: 50px;}
+}
+@media(max-width: 526px){
+	#inputTel{width: 82%;}
+	#phoneChk{
+		width: 16.2%;
+		font-size: 15px;
+	}
+}
+@media screen and (max-width:499px){body{background-image: none;}}
+@media screen and (max-width:400px){
+	#inputTel{width: 73%;}
+	#phoneChk{width: 25.4%;}
+}
+@media screen and (max-width:363px){
+	#inputTel{width: 72%;}
+	#phoneChk{width: 26%;}
+}
+@media screen and (max-width:309px){
+	#inputTel{width: 71%;}
+	#phoneChk{width: 26.7%;}
+}
+@media screen and (max-width:380px){
+	#inputTel{width: 70%;}
+	#phoneChk{width: 27.4%;}
 }
