QnAView 부트스트랩 추가 및 배경추가

--- a/src/main/webapp/resources/QnA/css/blog.css
+++ b/src/main/webapp/resources/QnA/css/blog.css
@@ -14,7 +14,10 @@
     font-size: 3.5rem;
   }
 }
-
+body{
+	background: url('/resources/myPage/Images/bg_01.png') no-repeat;
+	background-size: 700px;
+	}
 /* stylelint-disable selector-list-comma-newline-after */
 
 .blog-header {
