--- a/src/main/webapp/resources/festival/css/page.css
+++ b/src/main/webapp/resources/festival/css/page.css
@@ -5,3 +5,4 @@ body{
 
 #picture_group img{width:200px; height:200px;}
 #contentImg img{width:100px; height:100px;}
+#festivalcard{ background-color: rgba( 255, 255, 255, 0.8 );}
